--- a/public/css/style.css
+++ b/public/css/style.css
@@ -415,3 +415,45 @@
   .hidden {
     display: none;
   }
+  .chatBtn {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: none;
+    background-color: #32CD32;
+  }
+
+
+  
+  
+  .tooltip {
+    position: absolute;
+    top: -40px;
+    opacity: 0;
+    background-color: rgb(117, 255, 82);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition-duration: .5s;
+    pointer-events: none;
+    letter-spacing: 0.5px;
+  }
+  
+  .chatBtn:hover .tooltip {
+    opacity: 1;
+    transition-duration: .5s;
+  }
+  
+  .chatBtn:hover {
+    background-position: right;
+    transition-duration: 1s;
+  }
