--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -73,7 +73,7 @@
                 <i class='bx bxs-grid-alt'></i>
                 <h3>Applicant Filtering</h3>
             </a>
-            <a href="#">
+            <a href="/addposition">
                 <i class='bx bxs-user-account'></i>
                 <h3>Add Jobs</h3>
             </a>
