--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
                 <h1 class="text-center mb-5 wow fadeInUp "  data-wow-delay="0.1s">Explore By Category</h1>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp"  data-wow-delay="0.1s" >
-                        <a class="cat-item rounded p-4" id="mask-button" href="" onclick="buttonPressed('mask-button')">
+                        <a class="cat-item rounded p-4" id="mask-button" onclick="buttonPressed('mask-button')">
                             <i class="fa fa-3x fa-book-reader text-primary mb-4"></i>
                             <h6 class="mb-3">Reading Mask</h6>
                         </a>
