--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,15 +203,15 @@
                     
 
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <a class="cat-item rounded p-4" onclick="buttonPressed12()" style="cursor: pointer;">
-                            <i class="fa-solid fa-volume-high"></i>
-                            <h6 class="mb-3 reading12">Screen Reader</h6>
+                        <a class="cat-item rounded p-4" id="screenreader" onclick="buttonPressed12()" style="cursor: pointer;">
+                            <i class="fa-solid fa-volume-high speaker" id="screenlogo"></i>
+                            <h6 class="mb-3 screenr12 reading12">Screen Reader</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <a class="cat-item rounded p-4" href="">
-                            <i class="fa fa-3x fa-tasks text-primary mb-4"></i>
-                            <h6 class="mb-3 reading12">Project Management</h6>
+                        <a class="cat-item rounded p-4" href="" onclick="buttonPressed13()" style="cursor: pointer;">
+                            <i class="fa-solid fa-eye speaker"></i>
+                            <h6 class="mb-3 screenr12 reading12">Color Blind</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
