--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,14 +49,6 @@
         #job-mask{
             width:700px;
         }
-        .chat-bar-collapsible {
-            position: fixed;
-            bottom: 0;
-            right: 50px;
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-            z-index: 2;
-            margin-right: -2%;
-            }
     </style>
 </head>
 
@@ -225,9 +217,9 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item rounded p-4" href="">
-                            <i class="fa fa-3x fa-chart-line text-primary mb-4"></i>
-                            <h6 class="mb-3 reading12">Business Development</h6>
+                        <a class="cat-item rounded p-4" onclick="colorblind()">
+                            <i class="fa-solid fa-magnifying-glass speaker"></i>
+                            <h6 class="mb-3 screenr12 reading12">Text Enlargement</h6>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
