--- a/views/index.ejs
+++ b/views/index.ejs
@@ -217,7 +217,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item rounded p-4" onclick="colorblind()">
+                        <a class="cat-item rounded p-4" onclick="textenlargement()">
                             <i class="fa-solid fa-magnifying-glass speaker"></i>
                             <h6 class="mb-3 screenr12 reading12">Text Enlargement</h6>
                         </a>
