--- a/views/index.ejs
+++ b/views/index.ejs
@@ -195,8 +195,8 @@
                     <!-- "View Links" button with id="viewLinksIndex" -->
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                         <a class="cat-item rounded p-4" data-bs-toggle="modal" data-bs-target="#linksModal" id="viewLinksIndex">
-                            <i class="fa-solid fa-link text-primary mb-4" style="font-size: 2.3em;"></i>
-                            <h6 class="mb-3 reading12">View Links</h6>
+                            <i class="fa-solid fa-link text-primary mb-4 speaker" style="font-size: 2.6em; text-align: left;"></i>
+                            <h6 class="mb-3 screenr12 reading12" style="text-align: left;">View Links</h6>
                         </a>
                     </div>
                     
