--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
             <a href="/" class="nav-item nav-link active reading12 " id="home">Home</a>
             <a href="/about" class="nav-item nav-link reading12" id="about" >About</a>
             <a href="/uploadResume" class="nav-item nav-link reading12" id="upload">Upload Resume</a>
-            <div class="nav-item dropdown">
+            <div class="nav-item dropdown" id="dropdown">
                 <a href="#" class="nav-link dropdown-toggle reading12" data-bs-toggle="dropdown">Jobs</a>
                 <div class="dropdown-menu rounded-0 m-0">
                     <a href="/appliedfor" class="dropdown-item reading12">Job List</a>
