--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,19 +7,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="/" class="nav-item nav-link active reading12 " id="home">Home</a>
-            <a href="/about" class="nav-item nav-link reading12" id="about" >About</a>
-            <a href="/uploadResume" class="nav-item nav-link reading12" id="upload">Upload Resume</a>
+            <a href="/" class="nav-item nav-link active reading12  linkss" id="home">Home</a>
+            <a href="/about" class="nav-item nav-link reading12 linkss" id="about" >About</a>
+            <a href="/uploadResume" class="nav-item nav-link reading12 linkss" id="upload">Upload Resume</a>
             <div class="nav-item dropdown" id="dropdown">
-                <a href="#" class="nav-link dropdown-toggle reading12" data-bs-toggle="dropdown">Jobs</a>
+                <a href="#" class="nav-link dropdown-toggle reading12 linkss" data-bs-toggle="dropdown">Jobs</a>
                 <div class="dropdown-menu rounded-0 m-0">
-                    <a href="/appliedfor" class="dropdown-item reading12">Job List</a>
-                    <a href="" class="dropdown-item reading12">Job Detail</a>
+                    <a href="/appliedfor" class="dropdown-item reading12 linkss">Job List</a>
+                    <a href="" class="dropdown-item reading12 linkss">Job Detail</a>
                 </div>
             </div>
             <a href="" class="nav-item nav-link reading12">Contact</a>
         </div>
-        <a href="reg" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block reading12" id="changable">Registration <i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="reg" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block reading12 linkss" id="changable">Registration <i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
 
